--- a/gradle.properties
+++ b/gradle.properties
@@ -5,13 +5,12 @@ org.gradle.jvmargs=-Xmx1G
 minecraft_version=1.20.4
 loader_version=0.16.9
 # Mod Properties
-mod_version=1.0.0-SNAPSHOT
+mod_version=1.1.0
 maven_group=io.github.singlerr
 archives_base_name=sgadminui
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.97.2+1.20.4
-
 modernui_core_version=3.11.1
 modernui_version=3.11.1.2
 forgeconfigapiport_version=20.4.3
